--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
     const form = document.getElementById('form');
     const input = document.getElementById('input');
+    const messages = document.getElementById('messages');
 
     form.addEventListener('submit', (e) => {
       e.preventDefault();
@@ -34,6 +35,13 @@
         socket.emit('chat message', input.value);
         input.value = '';
       }
+    });
+
+    socket.on('chat message', (msg) => {
+      const item = document.createElement('li');
+      item.textContent = msg;
+      messages.appendChild(item);
+      window.scrollTo(0, document.body.scrollHeight);
     });
   </script>
 </body>
