--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
   </form>
   <script src="/socket.io/socket.io.js"></script>
   <script>
-    const socket = io();
+    const socket = io({
+      auth: {
+        serverOffset: 0
+      }
+    });
 
     const form = document.getElementById('form');
     const input = document.getElementById('input');
@@ -37,11 +41,12 @@
       }
     });
 
-    socket.on('chat message', (msg) => {
+    socket.on('chat message', (msg, serverOffset) => {
       const item = document.createElement('li');
       item.textContent = msg;
       messages.appendChild(item);
       window.scrollTo(0, document.body.scrollHeight);
+      socket.auth.serverOffset = serverOffset;
     });
   </script>
 </body>
